# OptimiseWindows

./: .gitignore  CMakeLists.txt  README.md  action_rest.md  imgui.ini  rules.json  test.cpp
docs/specs/: ARCHITECTURE.md  EXECUTION_PLAN.md  SPEC_MVP.md
scripts/: build_debug.bat  test.cpp  test_compiler.bat
src/: CMakeLists.txt  main.cpp
src/actions/: ActionNotification.hpp  ActionProcess.hpp  ActionScript.hpp
src/core/: ConfigManager.hpp  Engine.hpp  IMonitor.hpp  Lang.hpp  Logger.hpp
src/engine/: Rule.hpp  RuleEngine.hpp
src/gui/: GuiManager.hpp
src/modules/: Cleaner.hpp  ServiceManager.hpp  StartupManager.hpp
src/monitors/: ProcessMonitor.hpp  SystemMonitor.hpp
